--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         </div>
       </section>
 
-      <!-- Здесь будут изображения других пользователей -->
+      <!-- Здесь  будут  изображения  других пользователей -->
 
     </section>
 
@@ -237,6 +237,12 @@
     </section>
   </template>
 
+  <template id="comment">
+    <li class="social__comment">
+      <img class="social__picture" src="{{аватар}}" alt="{{имя комментатора}}" width="35" height="35">
+      <p class="social__text">{{текст комментария}}</p>
+    </li>
+  </template>
 </body>
 
 </html>
